<?xml version="1.0"?>
<package>
  <name>or_ompl</name>
  <version>0.6.0</version>
  <description>
    OpenRAVE bindings for OMPL.
  </description>
  <url type="repository">https://svn.personalrobotics.ri.cmu.edu/pr-ros-pkg/trunk/or_plugins/or_ompl</url>
  <maintainer email="mkoval@cs.cmu.edu">Michael Koval</maintainer>
  <author email="cdellin@cs.cmu.edu">Christopher Dellin</author>
  <author email="mklingen@cs.cmu.edu">Matthew Klingensmith</author>
  <author email="mkoval@cs.cmu.edu">Michael Koval</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>
  <build_depend>python</build_depend>
  <build_depend>python-argparse</build_depend>
  <build_depend>python-yaml</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>openrave_catkin</build_depend>
  <build_depend>ompl</build_depend>
  <build_depend>tinyxml</build_depend>
  <run_depend>openrave_catkin</run_depend>
  <run_depend>ompl</run_depend>
  <run_depend>tinyxml</run_depend>
</package>
