<?xml version="1.0"?>
<package format="2">
  <name>or_ompl</name>
  <version>0.7.0</version>
  <description>
    OpenRAVE bindings for OMPL.
  </description>
  <url type="repository">https://svn.personalrobotics.ri.cmu.edu/pr-ros-pkg/trunk/or_plugins/or_ompl</url>
  <maintainer email="mkoval@cs.cmu.edu">Michael Koval</maintainer>
  <author email="cdellin@cs.cmu.edu">Christopher Dellin</author>
  <author email="mklingen@cs.cmu.edu">Matthew Klingensmith</author>
  <author email="mkoval@cs.cmu.edu">Michael Koval</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>
  <build_depend>python</build_depend>
  <build_depend>python-argparse</build_depend>
  <build_depend>python-yaml</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>openrave_catkin</build_depend>
  <build_depend>ompl</build_depend>
  <build_depend>tinyxml</build_depend>
  <exec_depend>eigen</exec_depend>
  <exec_depend>openrave_catkin</exec_depend>
  <exec_depend>ompl</exec_depend>
  <exec_depend>tinyxml</exec_depend>
  <test_depend>python-nose</test_depend>
  <test_depend>python-numpy</test_depend>
</package>
